carousel alignment fix

--- a/styles/slider.css
+++ b/styles/slider.css
@@ -1,5 +1,6 @@
 .carousel-container {
   display: flex;
+  max-width: calc(1600px - var(--section-gutter-space));
   padding: 0 var(--section-gutter-space);
   background-color: var(--white);
   box-shadow: none;
